# KIDDNS-Android

./: LICENSE  README.MD  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/vipkid/vkdns/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/vipkid/vkdns/: Constants.java  MainActivity.java  VKApplication.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/vipkid/vkdns/: ExampleUnitTest.java
lib_vkdns/: CMakeLists.txt  build.gradle
lib_vkdns/src/androidTest/java/cn/com/vipkid/vkdns/: ExampleInstrumentedTest.java
lib_vkdns/src/main/: AndroidManifest.xml
lib_vkdns/src/main/cpp/: vkdns.cpp
lib_vkdns/src/main/java/cn/com/vipkid/vkdns/: AliHttpDnsStrategy.java  Constants.java  DefaultDnsMonitor.java  HostIntercept.java  HttpDnsMonitor.java  HttpDnsServiceProvider.java  HttpDnsStrategy.java  OsInvocationHandler.java  ReflectHelper.java  Utils.java
lib_vkdns/src/main/res/values/: strings.xml
lib_vkdns/src/test/java/cn/com/vipkid/vkdns/: ExampleUnitTest.java
